tests/vertical-slice/accept/generic_user_record_bitcopy.hew
type Wrapper<T> {
    inner: T,
}

fn main() -> i64 {
    let w = Wrapper { inner: 42 };
    w.inner
}
