tests/vertical-slice/reject/hashset_new_turbofish_arity_mismatch.hew
// HashSet takes exactly one type argument.
fn main() -> i64 {
    let _s = HashSet::<i64, i64>::new();
    0
}
